fixed some minor issues

--- a/src/sass/globals/_header.scss
+++ b/src/sass/globals/_header.scss
@@ -27,6 +27,7 @@ header {
             li {
                 margin-bottom: 1.3em;
                 margin-right: 4em;
+                padding-right: 3em;
             }
         }
     }
