--- a/css/index.css
+++ b/css/index.css
@@ -55,6 +55,7 @@ header nav .nav-items .close-menu img {
 header nav .nav-items li {
   margin-bottom: 1.3em;
   margin-right: 4em;
+  padding-right: 3em;
 }
 
 main {
@@ -111,6 +112,7 @@ aside {
 aside h2 {
   color: hsl(35deg, 77%, 62%);
   margin-bottom: 1.3em;
+  font-size: 1.8rem;
 }
 aside h3 {
   margin-bottom: 0.6em;
