--- a/css/index.css
+++ b/css/index.css
@@ -43,7 +43,7 @@ header nav .nav-items {
   right: 0;
   background-color: white;
   height: 100%;
-  padding: 2em 1em;
+  padding: 2em 1.4em;
   z-index: 999;
 }
 header nav .nav-items .close-menu {
@@ -53,9 +53,10 @@ header nav .nav-items .close-menu img {
   margin-left: auto;
 }
 header nav .nav-items li {
+  font-weight: 700;
   margin-bottom: 1.3em;
   margin-right: 4em;
-  padding-right: 3em;
+  padding-right: 4em;
 }
 
 main {
@@ -105,7 +106,7 @@ main .category .thumbnail-img:not(:last-of-type) {
 
 aside {
   background-color: hsl(240deg, 100%, 5%);
-  color: hsl(36deg, 100%, 99%);
+  color: hsl(233deg, 8%, 79%);
   padding: 1.6em;
   margin-block: 4em;
 }
@@ -116,6 +117,7 @@ aside h2 {
 }
 aside h3 {
   margin-bottom: 0.6em;
+  color: hsl(36deg, 100%, 99%);
 }
 aside p {
   margin: 0;
