--- a/src/sass/globals/_aside.scss
+++ b/src/sass/globals/_aside.scss
@@ -2,7 +2,7 @@
 
 aside {
     background-color: $clr-dark-blue;
-    color: $clr-off-white;
+    color: $clr-grayish-blue;
     padding: 1.6em;
     margin-block: 4em;
 
@@ -14,6 +14,7 @@ aside {
 
     h3 {
         margin-bottom: .6em;
+        color: $clr-off-white;
     }
 
     p {
