further improved styling

--- a/src/sass/globals/_aside.scss
+++ b/src/sass/globals/_aside.scss
@@ -24,7 +24,7 @@ aside {
     .news {
 
         &:not(:last-of-type) {
-            border-bottom: 1px solid;
+            border-bottom: 1px solid $clr-dark-grayish-blue;
             padding-bottom: 2em;
             margin-bottom: 2em;
         }
