--- a/css/index.css
+++ b/css/index.css
@@ -64,7 +64,7 @@ main {
 }
 main h1 {
   font-size: 2.7rem;
-  margin-block: 0.3em;
+  margin-block: 0.6em;
 }
 main p {
   line-height: 1.7;
@@ -123,7 +123,7 @@ aside p {
   margin: 0;
 }
 aside .news:not(:last-of-type) {
-  border-bottom: 1px solid;
+  border-bottom: 1px solid hsl(236deg, 13%, 42%);
   padding-bottom: 2em;
   margin-bottom: 2em;
 }
