--- a/css/index.css
+++ b/css/index.css
@@ -58,6 +58,9 @@ header nav .nav-items li {
   margin-right: 4em;
   padding-right: 4em;
 }
+header nav .nav-items li:hover {
+  color: hsl(35deg, 77%, 62%);
+}
 
 main {
   padding: 1em;
@@ -78,6 +81,9 @@ main .cta-btn {
   text-transform: uppercase;
   letter-spacing: 0.3em;
   font-weight: bold;
+}
+main .cta-btn:hover {
+  background-color: hsl(240deg, 100%, 5%);
 }
 main .category {
   display: flex;
@@ -118,6 +124,9 @@ aside h2 {
 aside h3 {
   margin-bottom: 0.6em;
   color: hsl(36deg, 100%, 99%);
+}
+aside h3:hover {
+  color: hsl(35deg, 77%, 62%);
 }
 aside p {
   margin: 0;
