--- a/src/sass/globals/_aside.scss
+++ b/src/sass/globals/_aside.scss
@@ -15,6 +15,10 @@ aside {
     h3 {
         margin-bottom: .6em;
         color: $clr-off-white;
+
+        &:hover {
+            color: $clr-soft-orange;
+        }
     }
 
     p {
