--- a/src/sass/globals/_header.scss
+++ b/src/sass/globals/_header.scss
@@ -9,6 +9,10 @@ header {
         justify-content: space-between;
         padding: 1em;
 
+        .nav-icon {
+            cursor: pointer;
+        }
+
         .nav-items {
             position: fixed;
             top: 0;
@@ -23,6 +27,7 @@ header {
 
                 img {
                     margin-left: auto;
+                    cursor: pointer;
                 }
             }
 
