--- a/src/sass/globals/_main.scss
+++ b/src/sass/globals/_main.scss
@@ -41,6 +41,11 @@ main {
         h3 {
             font-weight: $fw-800;
             margin-block: .7em;
+
+            &:hover {
+                color: $clr-soft-red;
+                cursor: pointer;
+            }
         }
 
         img {
