--- a/src/sass/globals/_default.scss
+++ b/src/sass/globals/_default.scss
@@ -11,6 +11,8 @@
 body {
     font-family: $ff-base;
     font-size: $fs-base;
+    width: 100%;
+    margin: 0 auto !important;
     min-height: 100vh;
 }
 
