--- a/src/sass/globals/_main.scss
+++ b/src/sass/globals/_main.scss
@@ -2,10 +2,10 @@
 
 main {
     padding: 1em;
-
+    
     h1 {
         font-size: 2.7rem;
-        margin-block: .6em;
+        margin-bottom: .6em;
     }
 
     p {
@@ -13,9 +13,10 @@ main {
         margin-bottom: 1em;
     }
 
-    .hero-img {
-        margin-inline: auto;
+    .headline {
+        padding-top: 1.5em;
     }
+
 
     .cta-btn {
         background-color: $clr-soft-red;
@@ -34,7 +35,7 @@ main {
 
     .category {
         display: flex;
-        gap: 1.3em;
+        gap: 1rem;
 
         span {
             font-size: 2em;
