--- a/src/sass/globals/_main.scss
+++ b/src/sass/globals/_main.scss
@@ -2,7 +2,8 @@
 
 main {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    grid-auto-flow:row;
     gap: 2em;
 
     aside {
@@ -57,6 +58,10 @@ main {
             flex-direction: column;
         }
 
+        .content p {
+            margin-bottom: 1em;
+        }
+
         .cta-btn {
             background-color: $clr-soft-red;
             padding: .8em 1.8em;
@@ -76,7 +81,6 @@ main {
 
     .category {
         display: flex;
-        align-items: flex-start;
         gap: 1rem;
         margin-top: 2em;
 
